--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
@@ -16,9 +16,7 @@
       {% for page in site.pages %}
         <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
       {% endfor %}
-      <a href="https://github.com/phuston/patrickandfrantonarethebestninjas" class="btn">View on GitHub</a>
-      <a href="https://github.com/phuston/patrickandfrantonarethebestninjas/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/phuston/patrickandfrantonarethebestninjas/tarball/master" class="btn">Download .tar.gz</a>
+
     </section>
 
     <section class="main-content">
