--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">pafatbs</h1>
       <h2 class="project-tagline"></h2>
+      <a href="index" class="btn">首页0</a>
       {% for page in site.pages %}
         <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
       {% endfor %}
