--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -13,10 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">pafatbs</h1>
       <h2 class="project-tagline"></h2>
-      <a href="index" class="btn">首页0</a>
-      {% for page in site.pages %}
-        <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
-      {% endfor %}
+      <a href="index" class="btn">首页</a>
+      <a href="backtrader" class="btn">Backtrader相关</a>
+      <a href="qlib" class="btn">Qlib相关</a>
+
 
     </section>
 
